fix 'allRGBValueCalculated' out of bound

--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -10,3 +10,4 @@
 # will get that as arg parameter; otherwise arg is simply the empty string.
 
 Process, "White Balance", Chart_White_Balance
+Process, "Poly fit Color",  PolyFitCalibration
