--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 		</dependency>
+		<dependency>
+	  		<groupId>org.jblas</groupId>
+	  		<artifactId>jblas</artifactId>
+	  		<version>1.2.4</version>
+		</dependency>
+	  
 	</dependencies>
 
 	<build>
